# diablo3citadel

./: README.md  pyproject.toml
diablo3citadel/: pyproject.toml
diablo3citadel/diablo3citadel/: .gitignore  diablo3flow.py  diablo3tasks.py  diablo3token.py  qa.ipynb
diablo3citadel/diablo3citadel/mysite/: .gitignore  qa.ipynb
diablo3citadel/diablo3citadel/mysite/diablo3citadel/: admin.py  apps.py  diablo3flow.py  diablo3tasks.py  models.py  urls.py  views.py
diablo3citadel/diablo3citadel/mysite/diablo3citadel/management/commands/: populate_db.py
diablo3citadel/diablo3citadel/mysite/diablo3citadel/migrations/: 0001_initial.py  0002_characterclass_itemtype_skill_item.py  0003_remove_item_itemtypeid_item_armor_item_armorhtml_and_more.py  0004_delete_item.py  0005_item.py  0006_alter_item_flavortext_alter_item_flavortexthtml.py  0007_delete_item.py  0008_item.py
diablo3citadel/diablo3citadel/mysite/diablo3citadel/static/diablo3citadel/: style.css
diablo3citadel/diablo3citadel/mysite/diablo3citadel/templates/admin/: base_site.html
diablo3citadel/diablo3citadel/mysite/diablo3citadel/templates/diablo3citadel/: detail.html  index.html
diablo3citadel/diablo3citadel/mysite/mysite/: settings.py  urls.py
